examples/errors/super_without_superclass.lox
class Eclair {
  cook() {
    super.cook();
    print "Pipe full of crème pâtissière.";
  }
}

var eclair = Eclair();
eclair.cook();